--- a/src/index.css
+++ b/src/index.css
@@ -8,12 +8,15 @@
 .App {
     max-width: 100%;
     margin: 0 auto;
+
 }
 .Container {
     margin-top: 8.5%;
     padding: 0.5%;
-    /* border: 1px solid purple; */
     margin-bottom: 0.1%;
+}
+body {
+  background-color: lightgray;
 }
 /* App Styles*/
 
@@ -26,7 +29,6 @@
     position: fixed;
     top: 0;
     border-bottom: 2px solid #23c566;
-    /* border-top: 2px solid #ecf025; */
 }
 /* Navigation Styles*/
 
@@ -62,7 +64,7 @@ footer .listItem:not(:last-child) {
     border-bottom: 2px solid #111111;
 }
 nav .listItem:hover {
-    border-top: 2px solid #000000;
+    border-top: 2px solid #111111;
     font-weight: bold;
 }
 footer .listItem:hover {
